@@ -6,6 +6,7 @@
 -revise ndarray str method.
 -add ndarray constructor methods.
 -add ndarray stats methods.
+-add ndarray dot method.
 
 0.54    2021-07-16
 -revise pyjsarray module for transcrypt.
